feat(backend): added missing endpoints and ocr imp
