# backend/internal/router/request_router.go
@@ -20,21 +20,22 @@ func RegisterRequestRoutes(rg *gin.RouterGroup, reqH *requestsHandler.RequestHan
 		reqs.GET("", reqH.List)
 		reqs.GET("/:id", reqH.GetDetail)
 
-		// Note: The design specifies /requests/:id/previous to get requester history.
-		// However, it's easily achieved with GET /requests?requester_id=X
-		// For now we'll route it to GetDetail or List depending on if we add a dedicated handler method.
-		// For the plan, it was "func (h *RequestHandler) GetPrevious(c *gin.Context)" which we didn't add,
-		// so I'll just map it to List if query parameter is handled, but wait, the design says GET /requests/:id/previous.
-		// Since it wasn't implemented as a separate method, we'll skip it for now or add it later.
+		reqs.GET("/:id/previous", reqH.GetPrevious)
 
 		reqs.POST("/:id/submit", reqH.Submit)
 		reqs.PUT("/:id/withdraw", reqH.Withdraw)
 		reqs.POST("/:id/resubmit", reqH.Resubmit)
 
 		reqs.POST("/:id/receipts", reqH.UploadReceipt)
-		// GET receipts is handled within GET /requests/:id
 
+		reqs.GET("/:id/comments", reqH.GetComments)
 		reqs.POST("/:id/comments", reqH.AddComment)
-		// GET comments is handled within GET /requests/:id
+	}
+
+	receipts := rg.Group("/receipts")
+	receipts.Use(middleware.AuthRequired())
+	{
+		receipts.GET("/:id", reqH.GetReceipt)
+		receipts.POST("/upload", reqH.UploadReceipt) // User requested POST /receipts/upload
 	}
 }
